<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_20"
    android:layout_marginEnd="@dimen/margin_20"
    >

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bin"
        android:textColor="@color/black"
        android:textSize="@dimen/bin_title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/header_total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/margin_4"
        android:textColor="@color/middle_gray"
        android:textSize="@dimen/bin_subtitle_size"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_dot"
        app:layout_constraintStart_toStartOf="@id/header_title"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        tools:text="@string/bin_amount_of_items_example"
        />

    <TextView
        android:id="@+id/header_total_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:drawablePadding="@dimen/margin_4"
        android:textColor="@color/middle_gray"
        android:textSize="@dimen/bin_number_of_items_example"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_dot"
        app:layout_constraintStart_toEndOf="@id/header_total_count"
        app:layout_constraintTop_toTopOf="@id/header_total_count"
        tools:text="@string/bin_total_sum_example"
        />

    <TextView
        android:id="@+id/button_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/header_button_background"
        android:padding="@dimen/margin_8"
        android:text="@string/clear_all"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/header_total_count"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/header_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bin_header_spinner_linear_height"
        android:layout_marginTop="@dimen/margin_6"
        android:background="@drawable/spinner_background_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/header_title"
        app:layout_constraintTop_toBottomOf="@id/header_total_count"
        >

        <TextView
            android:id="@+id/header_spinner_total_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_weight="7"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/bin_header_spinner_text"
            android:textColor="@color/black"
            android:textSize="@dimen/bin_header_spinner_text_size"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="@dimen/bin_header_spinner_sign_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/arrow_drop_up"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bin_recycler_view_height"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/footer_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_spinner"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bin_footer_conatainer_height"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@drawable/footer_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/footer_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:gravity="center"
            android:textColor="@color/main_blue"
            android:textSize="@dimen/bin_footer_total_sum_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/footer_old_sum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/bin_footer_total_price_example"
            />

        <TextView
            android:id="@+id/footer_old_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/middle_gray"
            android:textSize="@dimen/bin_footer_total_old_price_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/footer_sum"
            app:layout_constraintTop_toBottomOf="@id/footer_sum"
            tools:text="@string/bin_footer_total_old_price_example"
            />

        <View
            android:layout_width="@dimen/bin_footer_view_width"
            android:layout_height="@dimen/bin_footer_view_height"
            android:background="@color/middle_gray"
            app:layout_constraintBottom_toBottomOf="@+id/footer_old_sum"
            app:layout_constraintEnd_toEndOf="@+id/footer_old_sum"
            app:layout_constraintStart_toStartOf="@+id/footer_old_sum"
            app:layout_constraintTop_toTopOf="@+id/footer_old_sum"
            />

        <TextView
            android:id="@+id/proceed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10"
            android:background="@drawable/footer_button_background"
            android:padding="@dimen/margin_8"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>